:sparkles: feat(TinyMCE): add button.
* Create new option to TinyMCE for paste ipsum text.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "51942680+Mr-Basirnia@users.noreply.github.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "rahgozar\\inc\\" : "includes/"
+        }
+    },
     "minimum-stability": "stable",
     "require": {}
 }
